--- a/SharePoint-CSOM/news2/resources/apps/news-post-popular.html
+++ b/SharePoint-CSOM/news2/resources/apps/news-post-popular.html
@@ -1,6 +1,12 @@
 
 <div class='news-post-popular'>
-    <ul/>
+    <ul>
+    	<li class='loading'>
+			<div class='news-loading-container'>
+			    <i class='fa fa-refresh fa-spin fa-2x'></i>
+			</div>
+    	</li>
+    </ul>
 </div>
 <script type='text/javascript' src='{{~site}}/SiteAssets/news/apps/news-post-popular.js'></script>
 
