--- a/SharePoint-CSOM/news2/resources/search/Item_NewsByCategory.html
+++ b/SharePoint-CSOM/news2/resources/search/Item_NewsByCategory.html
@@ -5,14 +5,18 @@
 <!--[if gte mso 9]><xml>
 <mso:CustomDocumentProperties>
     <mso:TemplateHidden msdt:dt="string">0</mso:TemplateHidden>
-    <mso:MasterPageDescription msdt:dt="string">Displays a result tailored for Microblog feed posts and replies.</mso:MasterPageDescription>
+    <mso:MasterPageDescription msdt:dt="string">Displays a result tailored for the Corporate News items by Category.</mso:MasterPageDescription>
     <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106603</mso:ContentTypeId>
     <mso:TargetControlType msdt:dt="string">;#SearchResults;#</mso:TargetControlType>
     <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
-    <mso:ManagedPropertyMapping msdt:dt="string">'Title':'Title','Author':'FullPostAuthor','Path':'Path','Description':'Description','LastModifiedTime':'LastModifiedTime','CollapsingStatus':'CollapsingStatus','Created':'Created','HitHighlightedSummary':'HitHighlightedSummary','HitHighlightedProperties':'HitHighlightedProperties','ParentLink':'ParentLink','AttachmentDescription':'AttachmentDescription','AttachmentType':'AttachmentType','AttachmentURI':'AttachmentURI','RootPostID':'RootPostID','ReplyCount':'ReplyCount','LikesCount':'LikesCount','FullPostBody':'FullPostBody'</mso:ManagedPropertyMapping>
+    <mso:ManagedPropertyMapping msdt:dt="string">'Title':'Title','AuthorOWSUSER':'AuthorOWSUSER','EditorOWSUSER':'EditorOWSUSER','Path':'Path','LastModifiedTime':'LastModifiedTime','Created':'Created','HitHighlightedSummary':'HitHighlightedSummary','HitHighlightedProperties':'HitHighlightedProperties','ParentLink':'ParentLink','AttachmentDescription':'AttachmentDescription','AttachmentType':'AttachmentType','AttachmentURI':'AttachmentURI','RootPostID':'RootPostID','LikesCount':'LikesCount','NewsPostPublishedDate':'NewsPostPublishedDate','NewsPostCategory':'NewsPostCategory','NewsRollupImageOWSIMGE':'NewsRollupImageOWSIMGE','NewsPageImageOWSIMGE':'NewsPageImageOWSIMGE','BodyOWSMTXT':'BodyOWSMTXT'</mso:ManagedPropertyMapping>
+<mso:HtmlDesignStatusAndPreview msdt:dt="string">https://platinumdogsconsulting.sharepoint.com/sites/publishing/_catalogs/masterpage/Display Templates/Search/Buzz365/Item_NewsByCategory.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
+<mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
 </mso:CustomDocumentProperties>
 </xml><![endif]-->
 </head>
 <body>
+	<div id="Item_NewsByCategory">
+	</div>
 </body>
 </html>
