--- a/SharePoint-CSOM/news2/resources/search/Item_NewsCarousel.html
+++ b/SharePoint-CSOM/news2/resources/search/Item_NewsCarousel.html
@@ -10,6 +10,8 @@
     <mso:TargetControlType msdt:dt="string">;#SearchResults;#</mso:TargetControlType>
     <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
     <mso:ManagedPropertyMapping msdt:dt="string">'Title':'Title','AuthorOWSUSER':'AuthorOWSUSER','EditorOWSUSER':'EditorOWSUSER','Path':'Path','LastModifiedTime':'LastModifiedTime','Created':'Created','HitHighlightedSummary':'HitHighlightedSummary','HitHighlightedProperties':'HitHighlightedProperties','ParentLink':'ParentLink','AttachmentDescription':'AttachmentDescription','AttachmentType':'AttachmentType','AttachmentURI':'AttachmentURI','RootPostID':'RootPostID','LikesCount':'LikesCount','NewsPostPublishedDate':'NewsPostPublishedDate','NewsPostCategory':'NewsPostCategory','NewsRollupImageOWSIMGE':'NewsRollupImageOWSIMGE','NewsPageImageOWSIMGE':'NewsPageImageOWSIMGE','BodyOWSMTXT':'BodyOWSMTXT'</mso:ManagedPropertyMapping>
+<mso:HtmlDesignStatusAndPreview msdt:dt="string">https://platinumdogsconsulting.sharepoint.com/sites/publishing/_catalogs/masterpage/Display Templates/Search/Buzz365/Item_NewsCarousel.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
+<mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
 </mso:CustomDocumentProperties>
 </xml><![endif]-->
 </head>
