--- a/SharePoint-CSOM/news2/resources/search/Control_NewsCarousel.html
+++ b/SharePoint-CSOM/news2/resources/search/Control_NewsCarousel.html
@@ -9,44 +9,35 @@
 <mso:ContentTypeId msdt:dt="string">0x0101002039C03B61C64EC4A04F5361F385106601</mso:ContentTypeId>
 <mso:TargetControlType msdt:dt="string">;#SearchResults;#</mso:TargetControlType>
 <mso:HtmlDesignAssociated msdt:dt="string">1</mso:HtmlDesignAssociated>
+<mso:HtmlDesignStatusAndPreview msdt:dt="string">https://platinumdogsconsulting.sharepoint.com/sites/publishing/_catalogs/masterpage/Display Templates/Search/Buzz365/Control_NewsCarousel.html, Conversion successful.</mso:HtmlDesignStatusAndPreview>
+<mso:HtmlDesignConversionSucceeded msdt:dt="string">True</mso:HtmlDesignConversionSucceeded>
 </mso:CustomDocumentProperties>
 </xml><![endif]-->
 </head>
 <body>
     <script>
-        $includeScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Search/Group_NewsCarousel.js");
-        $includeScript(this.url, "https://platinumdogsconsulting.sharepoint.com/_catalogs/masterpage/Buzz365/js/jquery.bxslider.min.js");
+        $includeScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Search/Buzz365/Group_NewsCarousel.js");
+        $includeScript(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Search/Buzz365/jquery.bxslider.min.js");
+        $includeCSS(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Search/Buzz365/jquery.bxslider.css");
+        $includeCSS(this.url, "~sitecollection/_catalogs/masterpage/Display Templates/Search/Buzz365/news-carousel.css");
     </script>
 
     <div id="Control_NewsCarousel">
 <!--#_ 
-        RB.Masterpage.LoadResourceFromTenantRoot('_catalogs/masterpage/Buzz365/apps/news-carousel/news-carousel.css')
-            .done(function(a) {
-                if (window.console) window.console.log('**CTL** Loaded: '+a+' **');
-            });
-        RB.Masterpage.LoadBxSlider()
-            .done(function(a,b) {
-                if (window.console) window.console.log('**CTL** Loaded: '+a+' **');
-                if (window.console) window.console.log('**CTL** Loaded: '+b+' **');
-            });
         ctx.ListDataJSONGroupsKey = "ResultTables";
-        ctx.ClientControl.set_groupTemplateId('~sitecollection/_catalogs/masterpage/Display Templates/Search/Group_NewsCarousel.js');
+        ctx.ClientControl.set_groupTemplateId('~sitecollection/_catalogs/masterpage/Display Templates/Search/Buzz365/Group_NewsCarousel.js');
         AddPostRenderCallback(ctx, function() {
             $(function() {
-                RB.Masterpage.LoadBxSlider().done(function() {
-                    var cid = '.news-control-newscarousel';
-                    var slider = $(cid).bxSlider({
-                                    mode: 'fade', 
-                                    captions: false,
-                                    controls: false,
-                                    auto: true,
-                                    autoStart: true,
-                                    autoHover: true,
-                                    adaptiveHeight: false,
-                                    pause: 8000
-                                });
-                    slider.goToSlide(0);
-                });
+                var slider = $('.news-control-newscarousel').bxSlider({
+                            mode: 'fade', 
+                            captions: false,
+                            controls: false,
+                            auto: true,
+                            autoStart: true,
+                            autoHover: false,
+                            adaptiveHeight: false,
+                            pause: 8000
+                        });
             });
         });
 _#-->   
