--- a/SharePoint-CSOM/navigation/resources/megamenu.html
+++ b/SharePoint-CSOM/navigation/resources/megamenu.html
@@ -1,4 +1,2 @@
-<h2>MEGAMENU</h2>
-<div id='mega'>
-</div>
+<div id='mega-container'></div>
 <script type='text/javascript' src='../SiteAssets/megamenu.js'></script>
