--- a/SharePoint-CSOM/navigation/resources/megamenu.html
+++ b/SharePoint-CSOM/navigation/resources/megamenu.html
@@ -1,2 +1,2 @@
-<div id='mega-container'></div>
+<section id="main-menu-1" class="ms-dialogHidden"></section>
 <script type='text/javascript' src='../SiteAssets/megamenu.js'></script>
