--- a/SharePoint-CSOM/navigation/resources/sidenavigation.html
+++ b/SharePoint-CSOM/navigation/resources/sidenavigation.html
@@ -1,2 +1,87 @@
+<style type='text/css'>
+.tax-sidenav0-default {
+    overflow: hidden;
+}
+.tax-sidenav0-default h1 {
+    padding: 5px 5px 5px 10px;
+    margin: 0 5px 5px 5px;
+    transition: all 500ms ease;
+    color: #415a6c;
+    background-color: #aaa;
+}
+.tax-sidenav0-default h1.homenode {
+    font-weight: 800;
+    color: #ffcb00;
+    background-color: #415a6c;
+}
+.tax-sidenav0-default h1 a,
+.tax-sidenav0-default h1 a:visited {
+    text-decoration: none;
+    color: #415a6c;
+}
+.tax-sidenav0-default h1.expando:hover,
+.tax-sidenav0-default h1 a:hover {
+    cursor: pointer;
+    transition: all 500ms ease;
+    opacity: .5;
+}
+.tax-sidenav0-default h1 .fa-bars,
+.tax-sidenav0-default h1 .fa-chevron {
+    float: right;
+    margin: 4px 8px 0 0;
+}
+.tax-sidenav0-default h1 .fa-chevron:before {
+    content: "\f078";
+}
+.tax-sidenav0-default h1.open .fa-chevron:before {
+    content: "\f077";
+}
+.tax-sidenav0-default li h1 {
+    margin-right: 0;
+    margin-left: 0;
+    font-size: 1.3em;
+}
+.tax-sidenav0-default h1 + ul {
+    max-height: 0;
+    padding: 5px 5px 0 5px;
+    margin: -17px 5px 10px 5px;
+    overflow: hidden;
+
+    transition: all 500ms cubic-bezier(1, 0, 0, 1);
+    transform: scaleY(0) scaleX(0);
+    transform-origin: 0 0;
+    opacity: 0;
+    border: 1px solid #aaa;
+}
+.tax-sidenav0-default h1 + ul.open {
+    max-height: 500px;
+    margin-top: 0;
+    transition: all 500ms cubic-bezier(1, 0, 0, 1);
+    transform: scaleY(1) scaleX(1);
+    opacity: 1;
+}
+.tax-sidenav0-default li > ul {
+    padding-bottom: 5px;
+    margin-right: 0;
+    margin-bottom: 10px;
+    margin-left: 0;
+}
+.tax-sidenav0-default li.text,
+.tax-sidenav0-default li.link,
+.tax-sidenav0-default li.link a,
+.tax-sidenav0-default li.link a:visited {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    color: #002596;
+}
+.tax-sidenav0-default li.link:hover {
+    cursor: pointer;
+    transition: all 300ms ease;
+    opacity: .5;
+    background-color: #aaa;
+}
+</style>
 <section id="sidenavigation" class="ms-dialogHidden"></section>
 <script type='text/javascript' src='../SiteAssets/sidenavigation.js'></script>
+
