side navigation changeset 2
-updated fontawesome to 4.3.0
-updated TaxonomyDatastore caching
-updated Buzz365 masterpages
-added stock Buzz365 pagelayouts
-updated sidenavigation
-updated megamenu

--- a/SharePoint-CSOM/navigation/resources/sidenavigation.html
+++ b/SharePoint-CSOM/navigation/resources/sidenavigation.html
@@ -1,13 +1,15 @@
 <style type='text/css'>
 .tax-sidenav0-default {
     overflow: hidden;
+    margin-top: 10px;
 }
 .tax-sidenav0-default h1 {
     padding: 5px 5px 5px 10px;
-    margin: 0 5px 5px 5px;
+    margin: 0 0 5px 0;
     transition: all 500ms ease;
     color: #415a6c;
     background-color: #aaa;
+    font-size: 12pt;
 }
 .tax-sidenav0-default h1.homenode {
     font-weight: 800;
@@ -18,6 +20,7 @@
 .tax-sidenav0-default h1 a:visited {
     text-decoration: none;
     color: #415a6c;
+    display: block;
 }
 .tax-sidenav0-default h1.expando:hover,
 .tax-sidenav0-default h1 a:hover {
@@ -39,16 +42,17 @@
 .tax-sidenav0-default li h1 {
     margin-right: 0;
     margin-left: 0;
-    font-size: 1.3em;
+    font-size: 1.0em;
+    background-color: #ddd;
 }
 .tax-sidenav0-default h1 + ul {
     max-height: 0;
-    padding: 5px 5px 0 5px;
-    margin: -17px 5px 10px 5px;
+    padding: 5px 0 2px 5px;
+    margin: -14px 0 5px 0;
     overflow: hidden;
 
     transition: all 500ms cubic-bezier(1, 0, 0, 1);
-    transform: scaleY(0) scaleX(0);
+    transform: scaleY(0);
     transform-origin: 0 0;
     opacity: 0;
     border: 1px solid #aaa;
@@ -57,23 +61,30 @@
     max-height: 500px;
     margin-top: 0;
     transition: all 500ms cubic-bezier(1, 0, 0, 1);
-    transform: scaleY(1) scaleX(1);
+    transform: scaleY(1);
     opacity: 1;
 }
+.tax-sidenav0-default ul.open + h1 {
+	margin-top: 10px;
+}
 .tax-sidenav0-default li > ul {
-    padding-bottom: 5px;
-    margin-right: 0;
-    margin-bottom: 10px;
-    margin-left: 0;
+	padding-top: 0;
+	padding-bottom: 5px;
+	margin-right: 0;
+	margin-left: 0;
+	border: none;
 }
 .tax-sidenav0-default li.text,
 .tax-sidenav0-default li.link,
 .tax-sidenav0-default li.link a,
 .tax-sidenav0-default li.link a:visited {
     display: block;
-    padding: 5px;
     text-decoration: none;
     color: #002596;
+}
+.tax-sidenav0-default li.text,
+.tax-sidenav0-default li.link {
+    padding: 5px;
 }
 .tax-sidenav0-default li.link:hover {
     cursor: pointer;
@@ -81,7 +92,13 @@
     opacity: .5;
     background-color: #aaa;
 }
+.tax-sidenav0-default ul li.group {
+	margin-bottom: 8px;
+}
+.tax-sidenav0-default ul li.group:last-child {
+	margin-bottom: 7px;
+}
 </style>
-<section id="sidenavigation" class="ms-dialogHidden"></section>
+<section id="buzz-sidenavigation" class="ms-dialogHidden"></section>
 <script type='text/javascript' src='../SiteAssets/sidenavigation.js'></script>
 
